// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Matches shallow shapshot 1`] = `
<Tooltip
  align={Object {}}
  className="track-abbreviation-tooltip"
  content={
    <Tip
      track="Development"
      type={
        Object {
          "abbreviation": "F2F",
          "name": "First2Finish",
        }
      }
    />
  }
  defaultVisible={false}
  id=""
  onTooltipHover={[Function]}
  placeArrow={[Function]}
  position="topLeft"
  suppressDiv={false}
  trigger={
    Array [
      "hover",
    ]
  }
>
  <div
    className="mock-class"
  >
    abcedfghik
  </div>
</Tooltip>
`;

exports[`Matches shallow shapshot 2`] = `
<Tooltip
  align={Object {}}
  className="track-abbreviation-tooltip"
  content={
    <Tip
      track="Design"
      type={
        Object {
          "abbreviation": "CH",
          "name": "Challenge",
        }
      }
    />
  }
  defaultVisible={false}
  id=""
  onTooltipHover={[Function]}
  placeArrow={[Function]}
  position="topLeft"
  suppressDiv={false}
  trigger={
    Array [
      "hover",
    ]
  }
>
  <div
    className="mock-class"
  >
    abcedfghik
  </div>
</Tooltip>
`;
